# squawk.hs

./: .gitignore  LICENSE  Setup.hs  birdlist.yaml  makeSASS  squawk.cabal  squawk.ini  stack.yaml
app/: Cron.hs  Main.hs
src/: Config.hs  Routes.hs  Server.hs
src/BirdData/: Bird.hs  JSON.hs  ParseJSON.hs  YAML.hs
src/Cron/: Crawler.hs
src/DB/: Conn.hs
src/ORM/: ORMTest.hs
src/Quiz/: Bird.hs  YAML.hs
src/View/: AJAX.hs  ContentTypes.hs  Template.hs  TemplateUtil.hs  Views.hs
template/css/: styles.css  styles.css.map  styles.scss
template/hamlet/: categorySelect.hamlet  header.hamlet  home.hamlet
template/lucius/: styles.lucius  styles.lucius.map  styles.scss
