name:                squawk
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MortimerMcMire315/squawk#readme
license:             GPL-3
license-file:        LICENSE
author:              Seth A. Yoder
maintainer:          seth.a.yoder@gmail.com
copyright:           2016 Seth A. Yoder
category:            Web
build-type:          Custom
extra-source-files:  README.md
                   , birdlist.yaml
cabal-version:       >=1.23

library
  hs-source-dirs:      src
  exposed-modules:     Server

  other-modules:       Routes
                     , View.AJAX
                     , View.ContentTypes
                     , View.Views
                     , View.Template
                     , View.TemplateUtil
                     , BirdData.Bird
                     , BirdData.JSON
                     , BirdData.YAML

  build-depends:       aeson >= 1.0 && < 2.0
                     , base >= 4.7 && < 5
                     , blaze-html >= 0.8 && < 1.0
                     , bytestring >= 0.10 && < 0.20
                     , exceptions >= 0.8 && < 1.0
                     , happstack-clientsession >= 7.0
                     , happstack-server >= 7.0 && < 8.0
                     , lens >= 4.0 && < 5.0
                     , pcre-heavy >= 1.0 && < 2.0
                     , shakespeare >= 2.0.11 && < 3
                     , wreq >= 0.5 && < 1.0
                     , yaml >= 0.8 && < 1.0
                     , text >= 1.2 && < 2.0
  default-language:    Haskell2010

custom-setup
    setup-depends:     base
                     , Cabal
                     , process >= 1.4
                     , directory >= 1.3

executable squawk
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , squawk
  default-language:    Haskell2010

test-suite squawk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sparkive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MortimerMcMire315/squawk
